# AndroidSerialPort

./: build.gradle
SerialPortLibrary/: build.gradle
SerialPortLibrary/src/main/cpp/: CMakeLists.txt
SerialPortLibrary/src/main/java/com/kongqw/serialportlibrary/: SerialPort.java
gradle/wrapper/: gradle-wrapper.properties
